refactored Deduping, DedupingTest